--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>The Psychic Game</h1>
 	<h2>Guess which letter I'm thinking of</h2>
-	<div id="hangman">
+	<div id="psychic">
 		
 	</div>
 
